working on registration form
