# backend/src/sport/referee-types/dto.ts
@@ -1,0 +1,25 @@
+import { IsBoolean, IsNotEmpty, IsNumber, IsOptional, IsString, MaxLength } from 'class-validator';
+
+export class SportRefereeTypeDto {
+  @IsNotEmpty()
+  @IsString()
+  @MaxLength(100)
+  name: string;
+
+  @IsOptional()
+  @IsString()
+  @MaxLength(500)
+  note?: string;
+
+  @IsOptional()
+  @IsNumber()
+  ord: number;
+
+  @IsOptional()
+  @IsBoolean()
+  isActive: boolean;
+
+  @IsOptional()
+  @IsString()
+  base64?: string;
+}
