# backend/src/sys/auth/dto/register.dto.ts
@@ -1,12 +1,21 @@
-import { IsEmail, IsString, MinLength } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty, IsOptional, IsString, Length, MinLength } from 'class-validator';
 
 export class RegisterDto {
+  @ApiProperty({ example: 'test@example.com', description: 'The email of the user' })
+  @IsNotEmpty()
   @IsEmail()
   email: string;
 
+  @ApiProperty({ example: 'PASSword', description: 'The password of the user' })
+  @IsNotEmpty()
   @IsString()
   @MinLength(6)
   password: string;
 
+  @ApiProperty({ example: 'John Doe', description: 'The name of the user' })
+  @IsOptional()
+  @IsString()
+  @Length(3, 255, { message: 'Name must be between 3 and 255 characters' })
   name?: string;
 }
